--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,7 @@
       property="og:description"
       content="Portfolio page to showcase frontend skills"
     />
+    <link rel="preload" href="/roboto-mono-v31-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
