--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,9 @@
       property="og:description"
       content="Portfolio page to showcase frontend skills"
     />
-    <link rel="preload" href="/roboto-mono-v31-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700&display=swap" rel="stylesheet">
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
